# django-rest-framework-filters

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  README_PUBLISH.md  codecov.yml  index.html  manage.py  setup.cfg  setup.py  testsettings.py  tox.ini  twine_aws_login.sh
rest_framework_chain/: __init__.py  filters.py  filterset.py  tests.py
rest_framework_filters/: __init__.py  backends.py  compat.py  complex_ops.py  fields.py  filters.py  filterset.py  tests.py  utils.py  widgets.py
rest_framework_filters/templates/rest_framework_filters/: crispy_form.html
tests/: filters.py  models.py  settings.py  test_203.py  test_backends.py  test_complex_ops.py  test_deprecations.py  test_filtering.py  test_filters.py  test_filterset.py  test_forms.py  test_performance.py  test_regressions.py  test_utils.py
tests/perf/: README.md  filters.py  serializers.py  tests.py  urls.py  views.py
tests/related/: data.py  test_exclude.py  test_filter.py
tests/testapp/: __init__.py  apps.py  filters.py  lookups.py  models.py  serializers.py  urls.py  views.py
tests/testapp/migrations/: 0001_initial.py
