[coverage:run]
branch = True
source = .
omit = .venv/*,.tox/*

[coverage:report]
include = rest_framework_filters/*
show_missing = True

[isort]
skip = migrations
atomic = true
line_length = 90
include_trailing_comma = true
multi_line_output = 5
known_third_party = django,pytz,rest_framework,django_filters
known_first_party = rest_framework_filters

[flake8]
max_line_length = 90
max_complexity = 10
exclude = migrations

extend_ignore =
    A003  ; class attribute shadowing builtin
    D100,D101,D102,D103,D104,D105,D106,D107  ; docstring presence


[metadata]
name = djangorestframework-filters
version = 1.0.0.dev2
description = Better filtering for Django REST Framework
long_description = file: README.rst, LICENSE
license_file = LICENSE
license = MIT

author = Philip Neustrom
maintainer = Ryan P Kilby
author_email=philipn@gmail.com
maintainer_email = kilbyr@gmail.com

url = https://github.com/philipn/django-rest-framework-filters
project_urls =
    Source=https://github.com/philipn/django-rest-framework-filters
    Tracker=https://github.com/philipn/django-rest-framework-filters/issues

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP

[options]
python_requires = >=3.5
install_requires =
    djangorestframework
    django-filter>=2.0

zip_safe = False
include_package_data = True
